# homepage

./: .gitignore  README.md
homepage/static/computer/haskell/coding/: decrypt.hs  encrypt2.hs  index.html  nsc-0.0.0.1.ebuild  nsc.cabal  nsc.hs  nsc.html  nsc2.html  nsc3.html
homepage/static/computer/haskell/coding/binary_analyzer/: index.html  motivation.html  specification.html  whats.html
homepage/static/computer/haskell/coding/binary_analyzer/coding/: ListLike.hs  analyzer.html  (+3 more)
homepage/static/computer/haskell/coding/error_detection/: index.html
homepage/static/computer/haskell/coding/json/: index.html  simplest.html
homepage/static/computer/haskell/coding/make_license/: coding.html  index.html  makeLicense.hs  result_1.txt
homepage/static/computer/haskell/coding/nsc/: Nsc.hs  decrypt.hs  encrypt.hs  index.html  nsc.hs  nsc1.hs  nsc1.html  nsc2.hs  nsc2.html  nsc3.hs  nsc3.html  nsc4.hs  nsc4.html  padding.hs  timesWithState.hs  times_with_state.html
homepage/static/computer/haskell/coding/pkcs7/: Asn1Container.hs  checkCertificate.html  checkPem.hs  getCertificate.html  index.html
homepage/static/computer/haskell/coding/png/: critical_chunks.html  idat.html  index.html  no_compress.html
homepage/static/computer/haskell/coding/scheme/: index.html
homepage/static/computer/haskell/coding/simple_parser/: index.html
homepage/static/computer/haskell/coding/sqlite3/: hello.html  hello_c.html  index.html
homepage/static/computer/haskell/coding/this_server/: index.html  stmfile_hs.html
homepage/static/computer/haskell/coding/tips/: index.html
(+896 files in other folders)
